   this originator channel is applied to the newly originated outgoing channel.
   If using CEL this allows an association to be established between the two so
   it can be recognized that the originator is dialing the originated channel.

 * "language" (the default spoken language for the channel) is now included in
   the standard channel state output for suitable events.

AMI
------------------
 * "Language" (the default spoken language for the channel) is now included in
   the standard channel state output for suitable events.

------------------------------------------------------------------------------
--- Functionality changes from Asterisk 13.0.0 to Asterisk 13.1.0 ------------
------------------------------------------------------------------------------

AMI
------------------
 * Event NewConnectedLine is emitted when the connected line information on
   a channel changes.

ARI
------------------
 * Event ChannelConnectedLine is emitted when the connected line information
   on a channel changes.

Core Transfers
-----------------

The features.conf general section has three new configurable options:
    * transferdialattempts
	* transferretrysound
	* transferinvalidsound
For more information on what these options do, see the Asterisk wiki:
	https://wiki.asterisk.org/wiki/x/W4fAAQ

Channel Drivers
------------------

chan_pjsip
------------------
 * New 'media_encryption_optimistic' endpoint setting. This will use SRTP
   when possible but does not consider lack of it a failure.

res_pjsip_endpoint_identifer_ip
------------------
 * New CLI commands have been added: "pjsip show identif(y|ies)", which lists
   all configured PJSIP identify objects
   
------------------------------------------------------------------------------
--- Functionality changes from Asterisk 12 to Asterisk 13 --------------------
------------------------------------------------------------------------------

Overview
------------------
